--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-mod_ldap v2.8.2
+mod_ldap v2.8.3
 ===============
 
 mod_ldap is a module that allows proftpd to do user authentication and
@@ -6,7 +6,7 @@ name/UID lookups against an LDAP database.
 
 **Please note:** Read the CHANGES section below for mod_ldap v2.8 changes;
 some significant changes have been made. Do *NOT* upgrade to mod_ldap v2.8
-before reading the CHANGES section.
+or later before reading the CHANGES section.
 
 
 Sections:
