--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,32 @@
+v2.8.10:
+* Ditch ldap_build_filter() (non-portable and/or deprecated) in favor of
+  our own translation function. This should make mod_ldap build against
+  OpenLDAP 2.1.x and Novell eDirectory, among others.
+
+v2.8.9:
+* Added explicit OpenSSL link exception to the license.
+
+v2.8.8:
+* ProFTPD Bug 1659 - LDAP config handlers should use c->pool instead of
+  permanent_pool
+
+v2.8.7:
+* Properly drop root privs in the LDAPHomedirOnDemand code if we're
+  returning prematurely due to an error condition.
+* Small cleanup of the LDAPHomedirOnDemand directory creation code.
+
+v2.8.6:
+* Fix to the user-caching code that now prevents the cache from
+  returning an empty password struct in certain situations.
+
+v2.8.5:
+* Small fix in the group handlers - group lookups would sometimes be
+  attempted even if they were disabled.
+
+v2.8.4:
+* Fix for segfaults when optional arguments are omitted from
+  LDAPDoGIDLookups directive
+
 v2.8.3:
 * Secondary group support (thanks to Andreas Strodl for providing patches)
 * LDAPHomedirOnDemand modes are now absolute; they are no longer subject
@@ -109,38 +138,38 @@ v2.7.1:
 
 v2.7:
 * Added a fix for picky LDAP servers like Sun Directory Services; using
-AuthBinds with those LDAP servers would break in previous mod_ldap versions.
-See the comments in the code for more details (search for "Sun Directory
-Services").
+  AuthBinds with those LDAP servers would break in previous mod_ldap
+  versions.  See the comments in the code for more details (search for "Sun
+  Directory Services").
 * You can now pass a file mode to LDAPHomedirOnDemand to create home
-directories with that mode.
+  directories with that mode.
 * Improved group support; mod_ldap now supports multiple memberUid
-attributes for a group object.
+  attributes for a group object.
 * Miscellaneous neatening/tightening of high-level auth/lookup handler
-functions.
+  functions.
 * You can now specify custom LDAP search filters at runtime. See the
-configuration guide (doc/Configuration.html) entries for LDAPDo* for more
-details.
+  configuration guide (doc/Configuration.html) entries for LDAPDo* for more
+  details.
 * Objectclass is now enforced. You *must* have an objectclass attribute for
-each of your LDAP objects. This attribute must have a value of
-'posixAccount' ("objectclass: posixAccount"). For groups, this attribute
-must have the value 'posixGroup' ("objectclass: posixGroup"). If you wish to 
-disable this objectclass enforcement, use the the LDAP filter "(uid=%u)" for 
-Auth and UID lookups (see doc/Configuration.html for how to specify a custom
-LDAP search filter).
+  each of your LDAP objects. This attribute must have a value of
+  'posixAccount' ("objectclass: posixAccount"). For groups, this attribute
+  must have the value 'posixGroup' ("objectclass: posixGroup"). If you wish
+  to disable this objectclass enforcement, use the the LDAP filter
+  "(uid=%u)" for Auth and UID lookups (see doc/Configuration.html for how to
+  specify a custom LDAP search filter).
 * Removed allowedServices code. The functionality that allowedServices
-provided can now be duplicated with a modified LDAP search filter.
+  provided can now be duplicated with a modified LDAP search filter.
 
-For example, to replicate basic allowedServices checking, pass this LDAP
-search filter to LDAPDoAuth:
-(&(uid=%u)(|(allowedServices=*FTP*)(!(allowedService=*))))
+  For example, to replicate basic allowedServices checking, pass this LDAP
+  search filter to LDAPDoAuth:
+  (&(uid=%u)(|(allowedServices=*FTP*)(!(allowedService=*))))
 
-To emulate deniedServices checking, use this search filter:
-(&(uid=%u)(!(deniedServices=*FTP*)))
+  To emulate deniedServices checking, use this search filter:
+  (&(uid=%u)(!(deniedServices=*FTP*)))
 
-To emulate *both* allowedServices and deniedServices checking, use this
-filter (beware line wrap):
-(&(uid=%u)(|(allowedServices=*FTP*)(!(allowedService=*)))(!(deniedServices=*FTP*)))
+  To emulate *both* allowedServices and deniedServices checking, use this
+  filter (beware line wrap):
+  (&(uid=%u)(|(allowedServices=*FTP*)(!(allowedService=*)))(!(deniedServices=*FTP*)))
 
 v2.6.1:
 * Fixed a bug that would prevent proper search scope selection.
